--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "substrate-front-end-template",
-  "version": "0.1.1",
-  "private": true,
-  "author": "Parity Technologies <admin@parity.io>",
-  "license": "Unlicense",
+  "name": "dot_marketplace",
+  "version": "1.0",
+  "private": false,
+  "author": "wowlabz",
+  "license": "MIT",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
@@ -87,9 +87,6 @@
     ]
   },
   "homepage": "/",
-  "bugs": {
-    "url": "https://github.com/substrate-developer-hub/substrate-front-end-template/issues"
-  },
   "keywords": [
     "substrate",
     "substrate-ui",
