Update: Dockerfile and docker-compose.yml with env variables for the auth_service and the blockchain node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,7 @@ services:
         ports:
             - "9001:8000"
         command: yarn start build:docker
+        environment: 
+            - AUTH_SERVER=authentication_service
+            - BLOCKCHAIN_NODE=dot_marketplace_node
         restart: always
