Update: docker env variables for node and backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
             - "9001:8000"
         command: yarn start build:docker
         environment: 
-            - AUTH_SERVER=authentication_service
-            - BLOCKCHAIN_NODE=dot_marketplace_node
+            - REACT_APP_AUTH_SERVER=http://localhost:7001
+            - REACT_APP_BLOCKCHAIN_NODE=ws://127.0.0.1:9944
         restart: always
