--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "query-string": "^6.13.5",
     "react": "^16.14.0",
     "react-bootstrap": "^1.6.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.14.0",
     "react-icons": "^4.2.0",
