--- a/package.json
+++ b/package.json
@@ -1,97 +1,93 @@
 {
-  "name": "dot_marketplace",
-  "version": "1.0",
-  "author": "wowlabz",
-  "license": "MIT",
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "CI=true react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject",
-    "lint": "eslint src/**/*.js",
-    "lint:ci": "eslint src/**/*.js --max-warnings=0",
-    "lint:fix": "eslint --fix src/**/*.js",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build -m '[ci skip] Updates'"
-  },
-  "dependencies": {
-    "@polkadot/api": "^3.9.3",
-    "@polkadot/extension-dapp": "^0.37.1",
-    "@polkadot/keyring": "^5.6.3",
-    "@polkadot/networks": "^5.6.3",
-    "@polkadot/types": "^3.9.3",
-    "@polkadot/ui-keyring": "^0.69.1",
-    "@polkadot/ui-settings": "^0.69.1",
-    "@polkadot/util": "^5.6.3",
-    "@polkadot/util-crypto": "^5.6.3",
-    "antd": "^4.16.13",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
-    "formik": "^2.2.8",
-    "prop-types": "^15.7.2",
-    "query-string": "^6.13.5",
-    "react": "^16.14.0",
-    "react-bootstrap": "^1.6.0",
-    "react-circular-progressbar": "^2.0.4",
-    "react-copy-to-clipboard": "^5.0.3",
-    "react-dom": "^16.14.0",
-    "react-icons": "^4.2.0",
-    "react-redux": "^7.2.4",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2",
-    "react-select": "^5.1.0",
-    "react-toastify": "^7.0.4",
-    "redux": "^4.1.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
-    "yup": "^0.32.9"
-  },
-  "devDependencies": {
-    "eslint": "^7.20.0",
-    "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-only-warn": "^1.0.2",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "gh-pages": "^3.1.0",
-    "react-app-rewired": "^2.1.8",
-    "semistandard": "^16.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "semistandard"
-    ],
-    "plugins": [
-      "only-warn"
+    "name": "dot_marketplace",
+    "version": "1.0",
+    "author": "wowlabz",
+    "license": "MIT",
+    "scripts": {
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "CI=true react-app-rewired test --env=jsdom",
+        "eject": "react-app-rewired eject",
+        "lint": "eslint src/**/*.js",
+        "lint:ci": "eslint src/**/*.js --max-warnings=0",
+        "lint:fix": "eslint --fix src/**/*.js",
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d build -m '[ci skip] Updates'"
+    },
+    "dependencies": {
+        "@polkadot/api": "^7.3.1",
+        "@polkadot/extension-dapp": "^0.42.5",
+        "@polkadot/keyring": "^8.3.1",
+        "@polkadot/networks": "^8.3.1",
+        "@polkadot/types": "^7.3.1",
+        "@polkadot/ui-keyring": "^0.89.1",
+        "@polkadot/ui-settings": "^0.89.1",
+        "@polkadot/util": "^8.3.1",
+        "@polkadot/util-crypto": "^8.3.1",
+        "antd": "^4.16.13",
+        "axios": "^0.21.1",
+        "bootstrap": "^5.0.1",
+        "formik": "^2.2.8",
+        "node-polyfill-webpack-plugin": "^1.1.4",
+        "prop-types": "^15.7.2",
+        "query-string": "^6.13.5",
+        "react": "^17.0.2",
+        "react-bootstrap": "^1.6.0",
+        "react-circular-progressbar": "^2.0.4",
+        "react-copy-to-clipboard": "^5.0.4",
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.2.0",
+        "react-redux": "^7.2.4",
+        "react-router-bootstrap": "^0.25.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^5.0.0",
+        "react-select": "^5.1.0",
+        "react-toastify": "^7.0.4",
+        "redux": "^4.1.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.3.0",
+        "semantic-ui-css": "Semantic-Org/Semantic-UI-CSS#master",
+        "semantic-ui-react": "^2.1.1",
+        "stream-browserify": "^3.0.0",
+        "yup": "^0.32.9"
+    },
+    "devDependencies": {
+        "eslint-config-prettier": "^8.3.0",
+        "gh-pages": "^3.2.3",
+        "prettier": "2.5.1",
+        "react-app-rewired": "^2.1.11",
+        "semistandard": "^16.0.0"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "prettier"
+        ]
+    },
+    "engines": {
+        "node": ">=16",
+        "npm": ">=8"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not ie <= 99",
+            "not android <= 4.4.4",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "packageManager": "yarn@3.1.1",
+    "homepage": "/",
+    "keywords": [
+        "substrate",
+        "substrate-ui",
+        "polkadot-js"
     ]
-  },
-  "engines": {
-    "node": ">=12",
-    "npm": ">=6"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "homepage": "/",
-  "keywords": [
-    "substrate",
-    "substrate-ui",
-    "polkadot-js"
-  ]
 }
