Create Project view added for phase 3

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EXTEND_ESLINT=true
 PORT=8000
-REACT_APP_AUTH_SERVER=http://65.2.26.225:7001/
-REACT_APP_BLOCKCHAIN_NODE=wss://social_li_n1.wowlabz.com/
+REACT_APP_AUTH_SERVER=http://localhost:7001
+REACT_APP_BLOCKCHAIN_NODE=ws://127.0.0.1:9944
