fix: blockchain_node_url and build files

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EXTEND_ESLINT=true
 PORT=8000
 REACT_APP_AUTH_SERVER=https://dotmarketplaceauth.wowlabz.com/
-REACT_APP_BLOCKCHAIN_NODE=wss://social_li_n1.wowlabz.com/
+REACT_APP_BLOCKCHAIN_NODE=wss://dotmarketplacen1.wowlabz.com/
