add: IPFS file server port in env

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EXTEND_ESLINT=true
 PORT=8000
 REACT_APP_AUTH_SERVER=http://localhost:7001
 REACT_APP_BLOCKCHAIN_NODE=ws://127.0.0.1:9944
+REACT_APP_FILE_SERVER=http://localhost:8001
